tests/specs/run/cts/cjs_import_cts/check.out
Check file:///[WILDLINE]main.js
TS2580 [ERROR]: Cannot find name 'module'.
module.exports.add = function (a, b) {
~~~~~~
    at file:///[WILDLINE]

TS7006 [ERROR]: Parameter 'a' implicitly has an 'any' type.
module.exports.add = function (a, b) {
                               ^
    at file:///[WILDLINE]

TS7006 [ERROR]: Parameter 'b' implicitly has an 'any' type.
module.exports.add = function (a, b) {
                                  ^
    at file:///[WILDLINE]

Found 3 errors.

error: Type checking failed.
